#192 На центральном портале динамически формировать список документов на основании массива обьектов-документов

--- a/central-js/client/src/html/documents/index.html
+++ b/central-js/client/src/html/documents/index.html
@@ -51,275 +51,29 @@
                         </th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>
-                            Громадянський паспорт
-                        </td>
-                        <td>
-                            27 травня 2001
-                        </td>
-                        <td>
-                            Ощадбанк
-                        </td>
-                        <td>
-                            <a href="#"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span></a>
-                            <a href="#accordion1" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle"><span class="glyphicon glyphicon-link" aria-hidden="true"></span></a>
-                        </td>
-                    </tr>
-                    <tr id="accordion1" class="collapse">
-                        <td colspan="4">
-                            <div>
-                                <h3 class="input-header">Надати доступ до електронного документу</h3>
-                                <p class="input-header">Ви можете надати посилання на цей документ третій особі (в тому числі державному службовцю або представнику будь-якої іншої організації) через
-                                    мобільний телефон цієї особи (він верифікує свою особистість через SMS-пароль).
-                                </p>
-                                <br>
-                                <div class="panel panel-default">
-                                    <form role="form">
-                                        <div class="row">
-                                            <div class="form-group col-md-6">
-                                                <label for="name">Введіть ПІБ персони, якій надається доступ:</label>
-                                                <input type="text" class="form-control" id="name">
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="form-group col-md-10">
-                                                <label for="purpose">Введіть для яких цілей Ви надаєте доступ до цього документу:</label>
-                                                <textarea class="form-control" id="purpose"></textarea>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="form-group col-md-6">
-                                                <label for="phone">Введіть номер телефону, через який ця людина верифікується:</label>
-                                                <input type="text" class="form-control" id="phone">
-                                            </div>
-                                        </div>
 
-                                        <div class="row">
-                                            <div class="form-group col-md-2">
-                                                <label for="valid-days">Введіть строк дії доступу:</label>
-                                                <select class="form-control" id="valid-days">
-                                                    <option>1 день</option>
-                                                    <option>2 дня</option>
-                                                    <option>3 дні</option>
-                                                    <option>4 дні</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="submit-button">
-                                            <button type="submit" class="btn btn-primary">Надіслати посилання</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
+                <tbody ng-repeat="doc in documents" >
                     <tr>
                         <td>
-                            Водійське посвідчення
+                            {{doc.sName}}
                         </td>
                         <td>
-                            04 квітня 2015
+                            {{doc.sDDate}}
                         </td>
                         <td>
-                            ГУМВС м. Львів
+                            {{doc.sDOwner}}
+                        </td>
+                        <td>
+                            <input type="hidden" value="{{doc.nID}}">
                         </td>
                         <td>
                             <a href="#"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span></a>
-                            <a href="#accordion2" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle"><span class="glyphicon glyphicon-link" aria-hidden="true"></span></a>
+                            <a href="#accordion{{doc.nID}}" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle"><span class="glyphicon glyphicon-link" aria-hidden="true"></span></a>
                         </td>
-                    </tr>
-                    <tr id="accordion2" class="collapse">
-                        <td colspan="4">
-                            <div>
-                                <h3 class="input-header">Надати доступ до електронного документу</h3>
-                                <p class="input-header">Ви можете надати посилання на цей документ третій особі (в тому числі державному службовцю або представнику будь-якої іншої організації) через
-                                    мобільний телефон цієї особи (він верифікує свою особистість через SMS-пароль).
-                                </p>
-                                <br>
-                                <div class="panel panel-default">
-                                    <form role="form">
-                                        <div class="row">
-                                            <div class="form-group col-md-6">
-                                                <label for="name">Введіть ПІБ персони, якій надається доступ:</label>
-                                                <input type="text" class="form-control" id="name">
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="form-group col-md-10">
-                                                <label for="purpose">Введіть для яких цілей Ви надаєте доступ до цього документу:</label>
-                                                <textarea class="form-control" id="purpose"></textarea>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="form-group col-md-6">
-                                                <label for="phone">Введіть номер телефону, через який ця людина верифікується:</label>
-                                                <input type="text" class="form-control" id="phone">
-                                            </div>
-                                        </div>
 
-                                        <div class="row">
-                                            <div class="form-group col-md-2">
-                                                <label for="valid-days">Введіть строк дії доступу:</label>
-                                                <select class="form-control" id="valid-days">
-                                                    <option>1 день</option>
-                                                    <option>2 дня</option>
-                                                    <option>3 дні</option>
-                                                    <option>4 дні</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="submit-button">
-                                            <button type="submit" class="btn btn-primary">Надіслати посилання</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </td>
                     </tr>
-                    <tr>
-                        <td>
-                            Довідка про несудимість
-                        </td>
-                        <td>
-                            11 лютого 2014
-                        </td>
-                        <td>
-                            ГУМВС м. Львів
-                        </td>
-                        <td>
-                            <a href="#"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span></a>
-                            <a href="#accordion3" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle"><span class="glyphicon glyphicon-link" aria-hidden="true"></span></a>
-                        </td>
-                    </tr>
-                    <tr id="accordion3" class="collapse">
-                        <td colspan="4">
-                            <div>
-                                <h3 class="input-header">Надати доступ до електронного документу</h3>
-                                <p class="input-header">Ви можете надати посилання на цей документ третій особі (в тому числі державному службовцю або представнику будь-якої іншої організації) через
-                                    мобільний телефон цієї особи (він верифікує свою особистість через SMS-пароль).
-                                </p>
-                                <br>
-                                <div class="panel panel-default">
-                                    <form role="form">
-                                        <div class="row">
-                                            <div class="form-group col-md-6">
-                                                <label for="name">Введіть ПІБ персони, якій надається доступ:</label>
-                                                <input type="text" class="form-control" id="name">
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="form-group col-md-10">
-                                                <label for="purpose">Введіть для яких цілей Ви надаєте доступ до цього документу:</label>
-                                                <textarea class="form-control" id="purpose"></textarea>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="form-group col-md-6">
-                                                <label for="phone">Введіть номер телефону, через який ця людина верифікується:</label>
-                                                <input type="text" class="form-control" id="phone">
-                                            </div>
-                                        </div>
 
-                                        <div class="row">
-                                            <div class="form-group col-md-2">
-                                                <label for="valid-days">Введіть строк дії доступу:</label>
-                                                <select class="form-control" id="valid-days">
-                                                    <option>1 день</option>
-                                                    <option>2 дня</option>
-                                                    <option>3 дні</option>
-                                                    <option>4 дні</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="submit-button">
-                                            <button type="submit" class="btn btn-primary">Надіслати посилання</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Довідка про несудимість
-                        </td>
-                        <td>
-                            13 лютого 2013
-                        </td>
-                        <td>
-                            ГУМВС м. Львів
-                        </td>
-                        <td>
-                            <a href="#"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span></a>
-                            <a href="#accordion4" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle"><span class="glyphicon glyphicon-link" aria-hidden="true"></span></a>
-                        </td>
-                    </tr>
-                    <tr id="accordion4" class="collapse">
-                        <td colspan="4">
-                            <div>
-                                <h3 class="input-header">Надати доступ до електронного документу</h3>
-                                <p class="input-header">Ви можете надати посилання на цей документ третій особі (в тому числі державному службовцю або представнику будь-якої іншої організації) через
-                                    мобільний телефон цієї особи (він верифікує свою особистість через SMS-пароль).
-                                </p>
-                                <br>
-                                <div class="panel panel-default">
-                                    <form role="form">
-                                        <div class="row">
-                                            <div class="form-group col-md-6">
-                                                <label for="name">Введіть ПІБ персони, якій надається доступ:</label>
-                                                <input type="text" class="form-control" id="name">
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="form-group col-md-10">
-                                                <label for="purpose">Введіть для яких цілей Ви надаєте доступ до цього документу:</label>
-                                                <textarea class="form-control" id="purpose"></textarea>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="form-group col-md-6">
-                                                <label for="phone">Введіть номер телефону, через який ця людина верифікується:</label>
-                                                <input type="text" class="form-control" id="phone">
-                                            </div>
-                                        </div>
-
-                                        <div class="row">
-                                            <div class="form-group col-md-2">
-                                                <label for="valid-days">Введіть строк дії доступу:</label>
-                                                <select class="form-control" id="valid-days">
-                                                    <option>1 день</option>
-                                                    <option>2 дня</option>
-                                                    <option>3 дні</option>
-                                                    <option>4 дні</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="submit-button">
-                                            <button type="submit" class="btn btn-primary">Надіслати посилання</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Ідентифікаційний номер платника податків
-                        </td>
-                        <td>
-                            02 червня 2012
-                        </td>
-                        <td>
-                            Податкова інспекція м. Львів
-                        </td>
-                        <td>
-                            <a href="#"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span></a>
-                            <a href="#accordion5" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle"><span class="glyphicon glyphicon-link" aria-hidden="true"></span></a>
-                        </td>
-                    </tr>
-                    <tr id="accordion5" class="collapse">
+                    <tr id="accordion{{doc.nID}}" class="collapse">
                         <td colspan="4">
                             <div>
                                 <h3 class="input-header">Надати доступ до електронного документу</h3>
