--- a/central-js/client/src/html/documents/index.html
+++ b/central-js/client/src/html/documents/index.html
@@ -58,13 +58,16 @@
                             {{doc.sName}}
                         </td>
                         <td>
-                            {{doc.sDDate}}
+                            {{doc.sDate_Upload}}
                         </td>
                         <td>
-                            {{doc.sDOwner}}
+                            {{doc.sID_Subject_Upload}}
                         </td>
                         <td>
                             <input type="hidden" value="{{doc.nID}}">
+                        </td>
+                        <td>
+                            <input type="hidden" value="{{doc.sName}}">
                         </td>
                         <td>
                             <a href="#"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span></a>
