#192 На центральном портале динамически формировать список документов на основании массива обьектов-документов

--- a/central-js/client/src/html/documents/index.html
+++ b/central-js/client/src/html/documents/index.html
@@ -58,10 +58,11 @@
                             {{doc.sName}}
                         </td>
                         <td>
-                            {{doc.sDate_Upload}}
+                            {{doc.sDate_Upload | date:'yyyy-MM-dd'}}
+
                         </td>
                         <td>
-                            {{doc.sID_Subject_Upload}}
+                            {{doc.sSubjectName_Upload}}
                         </td>
                         <td>
                             <input type="hidden" value="{{doc.nID}}">
