--- a/dashboard-js/client/index.html
+++ b/dashboard-js/client/index.html
@@ -64,6 +64,7 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/moment/moment.js"></script>
       <script src="bower_components/angular-moment/angular-moment.js"></script>
+      <script src="bower_components/ngstorage/ngStorage.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <script src="bower_components/moment/locale/uk.js"></script>
