--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -15,7 +15,7 @@
 				<h3>{{subcategory.sName}}</h3>
 				<ul class="list-unstyled">
 					<li ng-repeat="service in subcategory.aService">
-						<a ui-sref="service.general({'id': service.nID })">{{service.sName}}</a>
+						<a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general">{{service.sName}}</a>
 					</li>
 				</ul>
 				<!--
