загрузка документов с сервера

--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -57,8 +57,7 @@
                     {{doc.sName}}
                 </td>
                 <td>
-                    {{doc.sDate_Upload | date:'yyyy-MM-dd'}}
-
+                    {{doc.oDate_Upload | date:'dd MMMM yyyy HH:mm'}}
                 </td>
                 <td>
                     {{doc.sSubjectName_Upload}}
