e-gov.org.ua > igov.org.ua

--- a/central-js/client/src/html/service/region/built-in/index.html
+++ b/central-js/client/src/html/service/region/built-in/index.html
@@ -17,7 +17,7 @@
 	</div>
 	<div class="list-group-item" ng-if="data.region">
 		<span>Крок 2. Увійдіть в систему через</span>
-		<button style="display: none;" class="btn btn-info"><i class="icon-door-lock"></i><span class="btn-text">e-gov.org.ua</span></button>
+		<button style="display: none;" class="btn btn-info"><i class="icon-door-lock"></i><span class="btn-text">igov.org.ua</span></button>
 		<a class="btn btn-info" ng-href="https://bankid.privatbank.ua/DataAccessService/das/authorize?response_type=code&client_id=dniprorada&redirect_uri={{$location.protocol()}}://{{$location.host()}}:{{$location.port()}}{{$state.href('service.general.region.built-in.bankid', {'id': service.nID, 'region': data.region.nID})}}">
 			<i class="icon-bank-id"></i>
 			<span class="btn-text">BankID</span>
