typeahead for city, remove html duplicates, now use view status to display next step information

--- a/central-js/client/src/html/service/city/content.html
+++ b/central-js/client/src/html/service/city/content.html
@@ -9,14 +9,15 @@
 				</div>
 				<div style="display:inline-block" ng-if="data.region">
 					<span>Місто</span>
-					<select class="form-control" name="city" ng-model="data.city" ng-options="city as city.sName for city in data.region.aCity track by city.nID" ng-disabled="data.city"></select>
+					<input class="form-control" name="city" type="text" ng-model="model.city" typeahead="city as city.sName for city in data.region.aCity" typeahead-editable="false" typeahead-on-select="onSelectCity($item)" ng-disabled="data.city"/>
 				</div>
 			</div>
 			<div class="col-md-1" ng-if="data.city">
 				<div class="link-button">
-					<a href="#">Змінити</a>
+					<a href="#" ng-click="step1()">Змінити</a>
 				</div>
 			</div>
 		</div>
 	</div>
+	<div class="list-group-item" ng-show="data.city" ui-view="status"></div>
 </div>
