--- a/dashboard-js/client/app/main/main.html
+++ b/dashboard-js/client/app/main/main.html
@@ -8,7 +8,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-12">
+    <div style="display: none;" class="col-lg-12">
       <h1 class="page-header">Доступні сервіси:</h1>
       <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="weblink in weblinks">
         <li><a href="{{weblink.link}}" tooltip="{{weblink.info}}">{{weblink.name}}</a></li>
