async cities load by typeahead

--- a/central-js/client/src/html/service/city/content.html
+++ b/central-js/client/src/html/service/city/content.html
@@ -5,11 +5,11 @@
 				<span>Крок 1. Оберіть свій регіон </span>
 				<div style="display:inline-block">
 					<span>Область</span>
-					<select class="form-control" name="region" ng-model="data.region" ng-options="region as region.sName for region in places track by region.nID" ng-disabled="data.city"></select>
+					<select class="form-control" name="region" ng-model="data.region" ng-options="region as region.sName for region in regions track by region.nID" ng-disabled="data.city"></select>
 				</div>
 				<div style="display:inline-block" ng-if="data.region">
 					<span>Місто</span>
-					<input class="form-control" name="city" type="text" ng-model="model.city" typeahead="city as city.sName for city in data.region.aCity" typeahead-editable="false" typeahead-on-select="onSelectCity($item)" ng-disabled="data.city"/>
+					<input class="form-control" name="city" type="text" ng-model="model.city" typeahead="city as city.sName for city in getCities($viewValue)" typeahead-editable="false" typeahead-wait-ms="200" typeahead-min-length="1" typeahead-on-select="onSelectCity($item)" ng-disabled="data.city"/>
 				</div>
 			</div>
 			<div class="col-md-1" ng-if="data.city">
