loading gif for main view and service views

--- a/central-js/client/src/index.html
+++ b/central-js/client/src/index.html
@@ -20,7 +20,12 @@
 <body>
 	<!-- build:section layout.header -->
     <!-- /build -->
-	<div ui-view=""></div>
+	<div ui-view="">
+		<div class="text-center">
+			<h2>Зачейкате, будь ласка</h2>
+			<img class="text-center" src="/img/loading.gif" alt="Loading" />
+		</div>
+	</div>
 	<!-- build:section layout.footer -->
     <!-- /build -->
 	<script data-main="./js/main" src="./js/require.js"></script>
