--- a/central-js/client/src/html/about/index.html
+++ b/central-js/client/src/html/about/index.html
@@ -1,8 +1,8 @@
 <div class="container">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-20">
 					<h1>
-    Цей портал було зроблено IT-волонтерами, на <a href="https://www.facebook.com/dubilet/posts/10153169671823552" target="_top">заклик</a> - "Поборимо корупцію не словом а справою!":
+                                            Цей портал було зроблено IT-волонтерами, на <a href="https://www.facebook.com/dubilet/posts/10153169671823552" target="_top">заклик Дмитра Дубілета</a><br> - "Поборимо корупцію не словом а справою!":
                                         </h1>
 				</div>
 			</div>
