https://github.com/e-government-ua/i/issues/274 +

--- a/central-js/client/src/html/documents/bankid/index.html
+++ b/central-js/client/src/html/documents/bankid/index.html
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-md-12">
-        <form class="form-signin-bankid">
+        <form class="form-signin-bankid_">
             <h4 class="form-signin-bankid-heading_">Щоб почати користуватись сервісом “Мои документы”, 
-                <a class="btn btn-lg btn-primary btn-block" href="#" ng-click="loginWithBankId()">"увійдіть через BankID"</a>
+                <a href="#" ng-click="loginWithBankId()">увійдіть через BankID</a>
                 або через 
-                <a href="#" onclick="alert('Працюватиме незабаром');">"електронно-ціфровий підпис"</a>
+                <a href="#" onclick="alert('Працюватиме незабаром');">електронно-ціфровий підпис</a>
             </h4>
             <div style="display: none;">
                 <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="loginWithBankId()">BankID</button>
