--- a/central-js/client/src/html/service/city/built-in/bankid.html
+++ b/central-js/client/src/html/service/city/built-in/bankid.html
@@ -5,11 +5,11 @@
 				<span>Крок 1. Оберіть свій регіон </span>
 				<div style="display:inline-block">
 					<span>Область</span>
-					<select class="form-control" name="region" ng-model="data.region" ng-options="region as region.sName for region in places track by region.nID" ng-disabled="data.city"></select>
+					<select class="form-control" name="region" ng-model="data.region" ng-options="region as region.sName for region in [data.region] track by region.nID" ng-disabled="data.city"></select>
 				</div>
 				<div style="display:inline-block" ng-if="data.region">
 					<span>Місто</span>
-					<select class="form-control" name="city" ng-model="data.city" ng-options="city as city.sName for city in data.region.aCity track by city.nID" ng-disabled="data.city"></select>
+					<select class="form-control" name="city" ng-model="data.city" ng-options="city as city.sName for city in [data.city] track by city.nID" ng-disabled="data.city"></select>
 				</div>
 			</div>
 			<div class="col-md-1" ng-if="data.city">
