--- a/central-js/client/src/html/service/city/built-in/bankid.html
+++ b/central-js/client/src/html/service/city/built-in/bankid.html
@@ -56,13 +56,15 @@
 									</span>
 								</p>
 								<select style="width:600px;" ng-switch-when="enum" name="{{property.id}}" ng-model="data.formData.params[property.id].value" ng-options="oEnumValue.id as oEnumValue.name for oEnumValue in property.enumValues" ng-required="property.required" class="form-control"></select>
-								<p class="fileinput-button" ng-switch-when="file">
-									<input type="file" name="{{property.id}}" ui-event="{change:'addFile(property.id, $event)'}" ng-required="property.required"/>
-                                	<button type="button" class="btn btn-success js-upload-btn" data-loading-text="Завантаження..." class="btn btn-primary" autocomplete="off"
-                                	ng-click="uploadFile(property.id)" ng-disabled="isUploading">
-                                    <span class="glyphicon glyphicon-file" aria-hidden="true"></span> Завантажити файл
+								<p class="input-group" ng-switch-when="file">
+									<file-field ng-model="data.formData.params[property.id].value">Add File</file-field>
+									<!--
+                                	<button type="button" class="btn btn-success js-upload-btn" data-loading-text="Завантаження..." class="btn btn-primary" autocomplete="off" ng-click="uploadFile(property.id)" ng-disabled="isUploading">
+										<input style="display:none" type="file" name="{{property.id}}" ui-event="{change:'addFile(property.id, $event)'}" ng-required="property.required"/>
+										<span class="glyphicon glyphicon-file" aria-hidden="true"></span> Завантажити файл
                                 	</button>
                                 	<div class="filename js-filename"></div>
+									-->
                             	</p>								
 							</div>
                                                         
