--- a/central-js/client/src/html/service/city/built-in/bankid.html
+++ b/central-js/client/src/html/service/city/built-in/bankid.html
@@ -32,7 +32,9 @@
 	<div class="list-group-item">
 		<div class="row">
 			<!--div class="col-md-12">Крок 3. Ви зможете отримати довідку про несудимість у ГУМВС м.Львова, С.Бандери, 1, м. Львів через 2 тижні. Ви отримаєте повідомлення через SMS та Email, коли довідка буде готова.</div-->
-			<div class="col-md-12">Крок 3. {{data.formData.params["processName"].name==null?"":data.formData.params["processName"].name}}</div>
+			<!--div class="col-md-12">Крок 3. {{data.formData.params["processName"].name==null?"":data.formData.params["processName"].name}}</div-->
+			<div class="col-md-12">Крок 3. {{ActivitiForm.sProcessDefinitionName}}</div>
+                        
                         <!-- Запит  {{data.formData.params["processName"].name}}-->
                         
 		</div>
