test processDefinitionId.sProcessDefinitionKeyWithVersion; +ActivitiForm.sProcessDefinitionName ++++

--- a/central-js/client/src/html/service/city/built-in/bankid.html
+++ b/central-js/client/src/html/service/city/built-in/bankid.html
@@ -33,7 +33,7 @@
 		<div class="row">
 			<!--div class="col-md-12">Крок 3. Ви зможете отримати довідку про несудимість у ГУМВС м.Львова, С.Бандери, 1, м. Львів через 2 тижні. Ви отримаєте повідомлення через SMS та Email, коли довідка буде готова.</div-->
 			<!--div class="col-md-12">Крок 3. {{data.formData.params["processName"].name==null?"":data.formData.params["processName"].name}}</div-->
-			<div class="col-md-12">Крок 3. 1{{data.formData.sProcessDefinitionName}} 2{{data.sProcessDefinitionName}} 3{{ActivitiForm.sProcessDefinitionName}} 4{{ActivitiForm.processDefinitionId.sProcessDefinitionName}} 5{{ActivitiForm.processDefinitionId.sProcessDefinitionName}} </div>
+			<div class="col-md-12">Крок 3. 1{{data.formData.sProcessDefinitionName}} 11{{data.formData.sProcessDefinitionName1}} 2{{data.sProcessDefinitionName}} 3{{ActivitiForm.sProcessDefinitionName}} 4{{ActivitiForm.processDefinitionId.sProcessDefinitionName}} 5{{data.sProcessDefinitionName}} 6{{data.sProcessDefinitionName2}} </div>
                         
                         <!-- Запит  {{data.formData.params["processName"].name}}-->
                         
