--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -57,7 +57,7 @@
         </div>
         <div ng-show="attachments">
           <p ng-repeat="item in attachments">
-            Файл: <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content/{{$index}}" target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
+            Файл: <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content/{{$index+1}}" target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
           </p>
         </div>
         <p ng-if="selectedTask"> <!--taskForm != null    -->
