1_install.bat 2_rebuild.bat 3_restart.bat +

--- a/central-js/client/src/html/about/index.html
+++ b/central-js/client/src/html/about/index.html
@@ -2,7 +2,8 @@
 			<div class="row">
 				<div class="col-md-20">
 					<h1>
-                                            Цей портал було зроблено IT-волонтерами, на <a href="https://www.facebook.com/dubilet/posts/10153169671823552" target="_top">заклик Дмитра Дубілета</a><br> - "Поборимо корупцію не словом а справою!":
+                                            Цей портал було зроблено IT-волонтерами, для України!
+                                            <!--, на <a href="https://www.facebook.com/dubilet/posts/10153169671823552" target="_top">заклик Дмитра Дубілета</a><br> - "Поборимо корупцію не словом а справою!": -->
                                         </h1>
 				</div>
 			</div>
