-убрано "зачекайте" -добавлено Увага - сайт в розрлобці

--- a/central-js/client/src/html/service/index.html
+++ b/central-js/client/src/html/service/index.html
@@ -12,7 +12,7 @@
 	</div>
 	<div ui-view="">
 		<div class="text-center">
-			<h2>Зачейкате, будь ласка</h2>
+			<!--h2>Зачейкате, будь ласка</h2-->
 			<img class="text-center" src="/img/loading.gif" alt="Loading" />
 		</div>
 	</div>
