--- a/central-js/client/src/index.html
+++ b/central-js/client/src/index.html
@@ -22,7 +22,7 @@
     <!-- /build -->
 	<div ui-view="">
 		<div class="text-center">
-			<h2>Зачейкате, будь ласка</h2>
+			<!--h2>Зачейкате, будь ласка</h2-->
 			<img class="text-center" src="/img/loading.gif" alt="Loading" />
 		</div>
 	</div>
