--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -9,7 +9,7 @@
         </div>
     </div>
 	<div class="row" ng-repeat="category in catalog">
-		<h1>{{category.sName}}</h1>
+		<h1 style="margin-bottom:-10px;margin-top:20px;">{{category.sName}}</h1>
 		
 			<div class="col-md-4" ng-repeat-start="subcategory in category.aSubcategory">
 				<h3>{{subcategory.sName}}</h3>
