--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -17,8 +17,8 @@
 					<li ng-repeat="service in subcategory.aService | orderBy: '-nSub'">
 						<!--a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general">({{service.nSub}}) {{service.sName}}</a-->
                                                 <!--a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service"></i>({{service.nSub}}) {{service.sName}}</a-->
-                                                <a ng-if="service.nSub>0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service"></i>({{service.nSub}}) {{service.sName}}</a>
-                                                <a ng-if="service.nSub==0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general">({{service.nSub}}) {{service.sName}}</a>
+                                                <a ng-if="service.nSub>0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service"></i>{{service.sName}}</a>
+                                                <a ng-if="service.nSub==0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general">{{service.sName}}</a>
 					</li>
 				</ul>
 				<!--
