--- a/central-js/client/src/html/service/index.html
+++ b/central-js/client/src/html/service/index.html
@@ -3,10 +3,10 @@
 		<div class="col-md-12">
 			<ul class="nav nav-tabs">
 				<li ui-sref-active="active" role="presentation"><a ui-sref="service.general({id: service.nID})">Послуга</a></li>
-				<li ui-sref-active="active" role="presentation"><a ui-sref="service.instruction">Інструкція</a></li>
-				<li ui-sref-active="active" role="presentation"><a ui-sref="service.legislation">Законодавство</a></li>
-				<li ui-sref-active="active" role="presentation"><a ui-sref="service.questions">Поширенні питання</a></li>
-				<li ui-sref-active="active" role="presentation"><a ui-sref="service.discussion">Обговорення</a></li>
+				<li ui-sref-active="active" role="presentation"><a ui-sref="service.instruction({id: service.nID})">Інструкція</a></li>
+				<li ui-sref-active="active" role="presentation"><a ui-sref="service.legislation({id: service.nID})">Законодавство</a></li>
+				<li ui-sref-active="active" role="presentation"><a ui-sref="service.questions({id: service.nID})">Поширенні питання</a></li>
+				<li ui-sref-active="active" role="presentation"><a ui-sref="service.discussion({id: service.nID})">Обговорення</a></li>
 			</ul>
 		</div>
 	</div>
