--- a/central-js/client/src/html/service/questions.html
+++ b/central-js/client/src/html/service/questions.html
@@ -1,3 +1,12 @@
-<div>
-    {{serviсe.sFAQ}}
+<div class="list-group">
+	<div class="list-group-item">
+		<div class="row no-margin-bottom">
+			<div class="col-md-1" ng-if="serviсe.sFAQ!=null">
+                            {{serviсe.sFAQ}}
+			</div>
+			<div class="col-md-1" ng-if="serviсe.sFAQ==null">
+                            Розділ у процесі наповнення
+			</div>
+		</div>
+	</div>
 </div>
